--- a/FilmsApp/FilmsApp/Views/Base.lproj/Main.storyboard
+++ b/FilmsApp/FilmsApp/Views/Base.lproj/Main.storyboard
@@ -73,18 +73,58 @@
         <!--Fav Films-->
         <scene sceneID="btl-jb-uas">
             <objects>
-                <viewController id="bBQ-5J-vku" customClass="FavouriteFilmsViewController" customModule="FilmsApp" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="bBQ-5J-vku" customClass="FavoriteFilmsViewController" customModule="FilmsApp" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="5gE-gg-2QN">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Любимые фильмы" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NdU-38-MSO">
+                                <rect key="frame" x="20" y="88" width="374" height="32"/>
+                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="26"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="EqT-82-FXC">
+                                <rect key="frame" x="20" y="125" width="374" height="737"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="HVe-6f-qZK">
+                                    <size key="itemSize" width="128" height="128"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                </collectionViewFlowLayout>
+                                <cells>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="IbW-JY-VW7">
+                                        <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="sT2-nc-bis">
+                                            <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                        </collectionViewCellContentView>
+                                    </collectionViewCell>
+                                </cells>
+                            </collectionView>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="MwC-6t-rC4"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="MwC-6t-rC4" firstAttribute="trailing" secondItem="EqT-82-FXC" secondAttribute="trailing" constant="20" id="6D8-Oe-hLF"/>
+                            <constraint firstItem="EqT-82-FXC" firstAttribute="leading" secondItem="MwC-6t-rC4" secondAttribute="leading" constant="20" id="DMX-zd-i9D"/>
+                            <constraint firstItem="EqT-82-FXC" firstAttribute="top" secondItem="NdU-38-MSO" secondAttribute="bottom" constant="5" id="FXa-s4-KsU"/>
+                            <constraint firstItem="MwC-6t-rC4" firstAttribute="trailing" secondItem="NdU-38-MSO" secondAttribute="trailing" constant="20" id="Mm4-L2-er4"/>
+                            <constraint firstItem="NdU-38-MSO" firstAttribute="top" secondItem="MwC-6t-rC4" secondAttribute="top" id="Nvk-t9-kB1"/>
+                            <constraint firstItem="NdU-38-MSO" firstAttribute="leading" secondItem="MwC-6t-rC4" secondAttribute="leading" constant="20" id="tmT-Hk-cZz"/>
+                            <constraint firstItem="EqT-82-FXC" firstAttribute="bottom" secondItem="MwC-6t-rC4" secondAttribute="bottom" id="xUT-Ra-sDj"/>
+                        </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="Fav Films" id="kyg-7d-np7"/>
+                    <connections>
+                        <outlet property="favoriteFilmsCollectionView" destination="EqT-82-FXC" id="IhQ-LC-I9S"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="kvH-eF-jvk" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1048" y="867"/>
+            <point key="canvasLocation" x="1047.8260869565217" y="866.51785714285711"/>
         </scene>
         <!--Poster Full View Controller-->
         <scene sceneID="nuU-ff-p6I">
