--- a/FilmsApp/FilmsApp/Views/FavoriteFilmViewCell.xib
+++ b/FilmsApp/FilmsApp/Views/FavoriteFilmViewCell.xib
@@ -9,7 +9,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="FavoriteFilmViewCell" customModule="FilmsApp" customModuleProvider="target"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="FavoriteFilmCell" id="b92-3h-anf" customClass="FavoriteFilmViewCell" customModule="FilmsApp" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="172" height="359"/>
@@ -28,7 +28,7 @@
                             <imageReference key="image" image="trash-solid" symbolScale="large"/>
                         </state>
                         <connections>
-                            <action selector="deleteFromFavPressed:" destination="b92-3h-anf" eventType="touchUpInside" id="xuR-U8-vIp"/>
+                            <action selector="deleteFromFavPressed:" destination="b92-3h-anf" eventType="touchUpInside" id="iCV-8z-H6m"/>
                         </connections>
                     </button>
                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="1" translatesAutoresizingMaskIntoConstraints="NO" id="P54-Ju-Mzy">
@@ -86,14 +86,10 @@
             <color key="backgroundColor" red="0.84556620114221359" green="0.94347796608380419" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <size key="customSize" width="172" height="359"/>
             <connections>
-                <outlet property="favoriteFilmTitleLabel" destination="a93-Q8-c7q" id="Pkp-Nf-EeA"/>
-                <outlet property="favoriteName" destination="a93-Q8-c7q" id="peO-ld-bR2"/>
-                <outlet property="favoritePosterImageView" destination="T2N-PJ-Gqh" id="YCM-yF-Jaa"/>
-                <outlet property="favoritePosterView" destination="T2N-PJ-Gqh" id="yur-2I-rRI"/>
-                <outlet property="favoriteRating" destination="0rK-gm-xBR" id="6K7-JA-HPO"/>
-                <outlet property="favoriteRatingLabel" destination="0rK-gm-xBR" id="uED-Qu-JXS"/>
-                <outlet property="favoriteYear" destination="yZF-v3-TVh" id="dZe-rw-1h8"/>
-                <outlet property="favoriteYearLabel" destination="yZF-v3-TVh" id="WrI-Bg-gFg"/>
+                <outlet property="favoriteFilmTitleLabel" destination="a93-Q8-c7q" id="Fuz-yZ-wpu"/>
+                <outlet property="favoritePosterImageView" destination="T2N-PJ-Gqh" id="JLS-Ww-w7w"/>
+                <outlet property="favoriteRatingLabel" destination="0rK-gm-xBR" id="9xh-aY-aJW"/>
+                <outlet property="favoriteYearLabel" destination="yZF-v3-TVh" id="hZP-l6-qkO"/>
             </connections>
             <point key="canvasLocation" x="-439.13043478260875" y="-133.59375"/>
         </collectionViewCell>
