--- a/FilmsApp/FilmsApp/Views/FilmCollectionViewCell.xib
+++ b/FilmsApp/FilmsApp/Views/FilmCollectionViewCell.xib
@@ -2,89 +2,80 @@
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="19529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19519"/>
-        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="collection view cell content view" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="FavoriteFilmViewCell" customModule="FilmsApp" customModuleProvider="target"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="FilmCell" id="CPZ-vI-inu" customClass="FilmCollectionViewCell" customModule="FilmsApp" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="223" height="483"/>
+        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="FilmCell" id="b92-3h-anf" customClass="FilmCollectionViewCell" customModule="FilmsApp">
+            <rect key="frame" x="0.0" y="0.0" width="172" height="295"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-            <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="Kja-8H-gVI">
-                <rect key="frame" x="0.0" y="0.0" width="223" height="483"/>
+            <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="RlM-FI-kcu">
+                <rect key="frame" x="0.0" y="0.0" width="172" height="295"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <view contentMode="scaleAspectFit" translatesAutoresizingMaskIntoConstraints="NO" id="Fth-Sz-0H9">
-                        <rect key="frame" x="10" y="10" width="203" height="338"/>
+                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="1" translatesAutoresizingMaskIntoConstraints="NO" id="P54-Ju-Mzy">
+                        <rect key="frame" x="8" y="10" width="156" height="275"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="image01" translatesAutoresizingMaskIntoConstraints="NO" id="zJf-UC-zoJ">
-                                <rect key="frame" x="0.0" y="0.0" width="203" height="338"/>
-                            </imageView>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="1" translatesAutoresizingMaskIntoConstraints="NO" id="tPe-o2-v7S">
+                                <rect key="frame" x="0.0" y="0.0" width="156" height="275"/>
+                                <subviews>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="T2N-PJ-Gqh">
+                                        <rect key="frame" x="0.0" y="0.0" width="156" height="208"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="208" id="9Ib-LA-4Af"/>
+                                            <constraint firstAttribute="width" constant="156" id="gIo-aM-NUR"/>
+                                        </constraints>
+                                    </imageView>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" text="Название фильма" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="a93-Q8-c7q">
+                                        <rect key="frame" x="0.0" y="209" width="156" height="23"/>
+                                        <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Год выпуска" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yZF-v3-TVh">
+                                        <rect key="frame" x="0.0" y="233" width="156" height="20.5"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Рейтинг" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0rK-gm-xBR">
+                                        <rect key="frame" x="0.0" y="254.5" width="156" height="20.5"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="275" id="jyf-Og-WW6"/>
+                                </constraints>
+                            </stackView>
                         </subviews>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="zJf-UC-zoJ" firstAttribute="leading" secondItem="Fth-Sz-0H9" secondAttribute="leading" id="Qjj-YU-GOq"/>
-                            <constraint firstAttribute="bottom" secondItem="zJf-UC-zoJ" secondAttribute="bottom" id="You-Rn-WgV"/>
-                            <constraint firstItem="zJf-UC-zoJ" firstAttribute="top" secondItem="Fth-Sz-0H9" secondAttribute="top" id="gX6-Mt-eux"/>
-                            <constraint firstAttribute="trailing" secondItem="zJf-UC-zoJ" secondAttribute="trailing" id="oqT-na-Mic"/>
+                            <constraint firstItem="tPe-o2-v7S" firstAttribute="top" secondItem="P54-Ju-Mzy" secondAttribute="top" id="26p-wi-zaP"/>
+                            <constraint firstAttribute="trailing" secondItem="tPe-o2-v7S" secondAttribute="trailing" id="2yf-35-FDa"/>
+                            <constraint firstAttribute="bottom" secondItem="tPe-o2-v7S" secondAttribute="bottom" id="fVs-Jz-7SW"/>
+                            <constraint firstItem="tPe-o2-v7S" firstAttribute="leading" secondItem="P54-Ju-Mzy" secondAttribute="leading" id="fsn-Ba-epq"/>
                         </constraints>
-                    </view>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3yv-Sn-5CC">
-                        <rect key="frame" x="10" y="368" width="203" height="27.5"/>
-                        <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="23"/>
-                        <nil key="textColor"/>
-                        <nil key="highlightedColor"/>
-                    </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Year" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="OZN-Xe-oJb">
-                        <rect key="frame" x="10" y="405.5" width="203" height="20.5"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                        <nil key="textColor"/>
-                        <nil key="highlightedColor"/>
-                    </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Rating" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Th0-XS-WkW">
-                        <rect key="frame" x="10" y="436" width="203" height="20.5"/>
-                        <fontDescription key="fontDescription" type="italicSystem" pointSize="17"/>
-                        <nil key="textColor"/>
-                        <nil key="highlightedColor"/>
-                    </label>
+                    </stackView>
                 </subviews>
                 <constraints>
-                    <constraint firstItem="OZN-Xe-oJb" firstAttribute="leading" secondItem="Kja-8H-gVI" secondAttribute="leading" constant="10" id="2dL-Ea-UJz"/>
-                    <constraint firstItem="Fth-Sz-0H9" firstAttribute="top" secondItem="Kja-8H-gVI" secondAttribute="top" constant="10" id="4Ck-ea-1SO"/>
-                    <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="Th0-XS-WkW" secondAttribute="bottom" constant="10" id="7hC-3Y-3ic"/>
-                    <constraint firstItem="3yv-Sn-5CC" firstAttribute="top" secondItem="Fth-Sz-0H9" secondAttribute="bottom" constant="20" id="CVx-Al-8oP"/>
-                    <constraint firstAttribute="trailing" secondItem="Th0-XS-WkW" secondAttribute="trailing" constant="10" id="Hh5-eM-zPQ"/>
-                    <constraint firstAttribute="trailing" secondItem="3yv-Sn-5CC" secondAttribute="trailing" constant="10" id="VWg-wp-H3G"/>
-                    <constraint firstItem="Th0-XS-WkW" firstAttribute="top" secondItem="OZN-Xe-oJb" secondAttribute="bottom" constant="10" id="YTG-Oa-xcP"/>
-                    <constraint firstItem="Th0-XS-WkW" firstAttribute="leading" secondItem="Kja-8H-gVI" secondAttribute="leading" constant="10" id="Z5f-Ad-qEH"/>
-                    <constraint firstItem="3yv-Sn-5CC" firstAttribute="leading" secondItem="Kja-8H-gVI" secondAttribute="leading" constant="10" id="jGK-gs-FVW"/>
-                    <constraint firstItem="Fth-Sz-0H9" firstAttribute="height" secondItem="Kja-8H-gVI" secondAttribute="height" multiplier="0.7" id="kou-98-hpc"/>
-                    <constraint firstAttribute="trailing" secondItem="Fth-Sz-0H9" secondAttribute="trailing" constant="10" id="orL-fh-eVR"/>
-                    <constraint firstItem="OZN-Xe-oJb" firstAttribute="top" secondItem="3yv-Sn-5CC" secondAttribute="bottom" constant="10" id="ppG-Q8-k2w"/>
-                    <constraint firstItem="Fth-Sz-0H9" firstAttribute="leading" secondItem="Kja-8H-gVI" secondAttribute="leading" constant="10" id="upS-d7-rfd"/>
-                    <constraint firstAttribute="trailing" secondItem="OZN-Xe-oJb" secondAttribute="trailing" constant="10" id="xX2-xS-kzf"/>
+                    <constraint firstItem="P54-Ju-Mzy" firstAttribute="top" secondItem="RlM-FI-kcu" secondAttribute="top" constant="10" id="a8W-yw-1C1"/>
+                    <constraint firstAttribute="trailing" secondItem="P54-Ju-Mzy" secondAttribute="trailing" constant="8" id="bRL-lM-LnB"/>
+                    <constraint firstItem="P54-Ju-Mzy" firstAttribute="leading" secondItem="RlM-FI-kcu" secondAttribute="leading" constant="8" id="y0c-W5-64l"/>
                 </constraints>
             </collectionViewCellContentView>
-            <color key="backgroundColor" red="0.8974346662068996" green="1" blue="0.78389688118559675" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
-            <size key="customSize" width="194" height="503"/>
+            <color key="backgroundColor" red="0.88235294117647056" green="1" blue="0.77647058823529413" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <size key="customSize" width="172" height="298"/>
             <connections>
-                <outlet property="containerView" destination="Fth-Sz-0H9" id="jdh-Cc-iwz"/>
-                <outlet property="filmTitleLabel" destination="3yv-Sn-5CC" id="Vgh-XY-Zgz"/>
-                <outlet property="posterImageView" destination="zJf-UC-zoJ" id="4er-BZ-km0"/>
-                <outlet property="ratingLabel" destination="Th0-XS-WkW" id="VjI-OK-xJ3"/>
-                <outlet property="yearLabel" destination="OZN-Xe-oJb" id="skM-bG-wIL"/>
+                <outlet property="filmTitleLabel" destination="a93-Q8-c7q" id="np5-Di-UKp"/>
+                <outlet property="posterImageView" destination="T2N-PJ-Gqh" id="Dbx-XO-iFW"/>
+                <outlet property="ratingLabel" destination="0rK-gm-xBR" id="V01-Sd-g5s"/>
+                <outlet property="yearLabel" destination="yZF-v3-TVh" id="9Xm-cU-t58"/>
             </connections>
-            <point key="canvasLocation" x="-106.5217391304348" y="246.76339285714283"/>
+            <point key="canvasLocation" x="-439.13043478260875" y="-154.01785714285714"/>
         </collectionViewCell>
     </objects>
-    <resources>
-        <image name="image01" width="411" height="617"/>
-        <systemColor name="systemBackgroundColor">
-            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-        </systemColor>
-    </resources>
 </document>
